tests/build/cases/impl_ui_node/delegate_expr_error_incorrect_type_child.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> cases/impl_ui_node/delegate_expr_error_incorrect_type_child.rs:9:16
    |
9   | #[impl_ui_node(child)]
    | ---------------^^^^^--
    | |              |
    | |              the trait `UiNode` is not implemented for `NotANode`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate(d: &impl UiNode) -> &impl UiNode {
    |                              ^^^^^^ required by this bound in `delegate`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> cases/impl_ui_node/delegate_expr_error_incorrect_type_child.rs:9:16
    |
9   | #[impl_ui_node(child)]
    | ---------------^^^^^--
    | |              |
    | |              the trait `UiNode` is not implemented for `NotANode`
    | required by a bound introduced by this call
    |
note: required by a bound in `delegate_mut`
   --> $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_mut(d: &mut impl UiNode) -> &mut impl UiNode {
    |                                      ^^^^^^ required by this bound in `delegate_mut`
